Workaround: Removes the timed debug capabilities of lib-dbg.
This messed with the global construction of objects on the windows platform.
So the application hung on startup before reaching the main entrypoint.

--- a/libdbg/CMakeLists.txt
+++ b/libdbg/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8.12)
 set(dbg-sources
 	debug_macros.hpp
 	time_util.hpp time_util.cpp
-	timed_debug.hpp timed_debug.cpp
+#	timed_debug.hpp timed_debug.cpp
 	core_dump.hpp core_dump.cpp
 )
 
