--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -40,6 +40,7 @@ target_link_libraries(dmp-server
 	PRIVATE dmp-library
 	PRIVATE dmp-common
 	PRIVATE dmp-net
+	PRIVATE dmp-config
 	PRIVATE boost-fusion-utils
 	PRIVATE dbg
 )
