Added a start to debian packaging needs a test cycle on a clean debian.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,16 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(dmp)
 
+set(CPACK_PACKAGE_NAME dmp)
+set(CPACK_GENERATOR "DEB")
+set(CPACK_PACKAGE_VERSION 0.1)
+set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE x86_64)
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "gstreamer1.0-plugins-bad (>= 1.2), gstreamer1.0-plugins-good (>= 1.2), gstreamer1.0-plugins-base (>= 1.2), libgstreamer1.0-0 (>= 1.2), libtagc0 (>= 1.9), qt5-default (>= 5.2), libboost-all-dev (>= 1.54), libsodium13 (>= 1.0.1)")
+set(CPACK_PACKAGE_CONTACT "dennis@brentj.es")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A distributed media player")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
+
+include(CPack)
 
 include(wubwubcmake/warning_settings.cmake)
 get_sane_warning_flags(warnings)
