Rewritten the configuration handling to use boost::fusion and to be an more abstract view of the config contents.

--- a/libdmp-config/CMakeLists.txt
+++ b/libdmp-config/CMakeLists.txt
@@ -10,7 +10,9 @@ find_package(Boost REQUIRED)
 
 target_link_libraries(dmp-config
 	PRIVATE ${Boost_LIBRARIES}
-	dbg
+	PRIVATE dbg
+	PRIVATE boost-fusion-utils
+
 )
 
 target_include_directories(dmp-config SYSTEM
