Adds a test for encrypted connections.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,4 +5,12 @@ target_link_libraries(plaintext_connection_test
 	PRIVATE dmp-net
 )
 
-add_test(testname plaintext_connection_test)
+add_test(Plaintext_connection_test. plaintext_connection_test)
+
+add_executable(encrypted_connection_test encr_conn.cpp)
+
+target_link_libraries(encrypted_connection_test
+	PRIVATE dmp-net
+)
+
+add_test(Encrypted_connection_test. encrypted_connection_test)
