--- a/libdmp-library/src/CMakeLists.txt
+++ b/libdmp-library/src/CMakeLists.txt
@@ -18,6 +18,7 @@ target_include_directories(dmp-library
 target_link_libraries(dmp-library
 	PUBLIC boost-fusion-utils
 	PUBLIC dmp-config
+	PRIVATE serialization
 	PRIVATE ${Boost_LIBRARIES}
 	PRIVATE ${TAGLIB_LIBRARIES}
 	PRIVATE ${ICU_LIBRARIES}
