offloaded library loading to a seperate thread, give status updates in the QStatusBar.

--- a/libserialization/CMakeLists.txt
+++ b/libserialization/CMakeLists.txt
@@ -19,7 +19,7 @@ target_include_directories(serialization
 )
 
 if(USE_GPERF)
-	target_link_libraries(boost-fusion-utils 
+	target_link_libraries(serialization 
 		PRIVATE "-lprofiler"
 	)
 endif(USE_GPERF)
